# ART

./: README.md  pyproject.toml
dev/: es.ipynb  yes-no-maybe.ipynb
dev/llama-factory/: README.md  pyproject.toml
dev/llama-factory/configs/: deepspeed_zero3_235b.json  qwen3_235b_lora_zero3.yaml
dev/math-vista/: math-vista.ipynb
dev/yes-no-maybe-vision/: train.ipynb
docs/features/: checkpoint-deletion.mdx
docs/fundamentals/: art-client.mdx
docs/getting-started/: installation-setup.mdx  notebooks.mdx  quick-start.mdx
examples/: openenv_echo.py
examples/temporal_clue/: temporal-clue-7b.ipynb  temporal-clue-context-distillation.ipynb
examples/tic_tac_toe/: tic-tac-toe-serverless.py
src/art/: __init__.py  client.py  gather.py  model.py  openai.py
src/art/dev/: get_model_config.py
src/art/local/: backend.py
src/art/preprocessing/: pack.py  tokenize.py
src/art/serverless/: backend.py
src/art/unsloth/: service.py  train.py
src/art/utils/: trajectory_logging.py
src/art/vllm/: patches.py  server.py
