[project]
name = "llama-factory-job"
version = "0.0.1"
description = "Isolated env to run LLaMA-Factory SFT"
requires-python = ">=3.10,<3.13"
dependencies = [
  "llamafactory==0.9.3",
  "datasets>=2.19.0",
  "torch>=2.4.0",
  "accelerate==1.7.0",
  "transformers==4.52.4",
  "peft>=0.12.0",
  "bitsandbytes>=0.43.1",
  "tiktoken",
  "huggingface-hub>=0.24.0",
  "safetensors",
  "deepspeed>=0.17.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
environments = ["sys_platform == 'linux'"]
required-version = ">=0.6.15"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["llama_factory_job"]
